--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,12 +1,13 @@
 * {
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
   box-sizing: inherit;
+  background-color: $dark;
   padding: 0;
   margin: 0;
   width: 100vw;
   height: 100vh;
-  background-color: $dark;
 }
