Diseño del login

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -4,3 +4,5 @@
 //Components
 @import "./components/login";
 @import "./components/button";
+@import "./components/start";
+@import "./components/register";
