--- a/src/styles/components/_login.scss
+++ b/src/styles/components/_login.scss
@@ -1,3 +1,86 @@
+.login__article {
+  width: 90%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  color: #ffffff;
+}
+.login__btn-back {
+  font-size: 2em;
+  color: #ffffff;
+}
+.login__form {
+  position: relative;
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.login__form-input {
+  background-color: $input-login;
+  border: thin solid #37343f;
+  width: 90%;
+  height: 70px;
+  margin-top: 10px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  transition: border 300ms ease;
+  -webkit-transition: border 300ms ease;
+  -moz-transition: border 300ms ease;
+  -ms-transition: border 300ms ease;
+  -o-transition: border 300ms ease;
+  &:focus {
+    outline: none;
+    border: thin solid #6b6679;
+  }
+  &::placeholder {
+    padding-left: 20px;
+  }
+}
+.pass {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+}
+.login__article-btn-eye {
+  background-color: $input-login;
+  border: none;
+  position: absolute;
+  top: 40%;
+  right: 40px;
+  color: #fff;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border: thin solid #6b6679;
+}
+.container-btn {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.login__article-btn_login {
+  display: block;
+  width: 70%;
+  height: 50px;
+  border-radius: 18px;
+  -webkit-border-radius: 18px;
+  -moz-border-radius: 18px;
+  -ms-border-radius: 18px;
+  -o-border-radius: 18px;
+  border: none;
+  background-color: #ffff;
+  text-align: center;
+}
 @media screen and (min-width: 576px) {
 }
 
