comenzando el inicio

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -5,4 +5,4 @@
 @import "./components/login";
 @import "./components/button";
 @import "./components/start";
-@import "./components/register";
+@import "./components/inicio";
