--- a/src/styles/components/_login.scss
+++ b/src/styles/components/_login.scss
@@ -9,6 +9,9 @@
   font-size: 2em;
   color: #ffffff;
 }
+.login__article-paragraph {
+  margin-bottom: -30px;
+}
 .login__form {
   position: relative;
   width: 100%;
@@ -18,12 +21,13 @@
   justify-content: center;
   align-items: center;
 }
+
 .login__form-input {
   background-color: $input-login;
   border: thin solid #37343f;
   width: 90%;
   height: 70px;
-  margin-top: 10px;
+  margin-top: 5px;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
@@ -65,7 +69,24 @@
 .container-btn {
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: -50px;
+  h5 {
+    color: $text;
+  }
+}
+.links {
+  display: flex;
+  align-items: center;
+}
+.link-register {
+  cursor: pointer;
+  margin-left: 7px;
+  text-decoration: none;
+  color: #ffffff;
+  z-index: 10;
 }
 
 .login__article-btn_login {
@@ -80,6 +101,15 @@
   border: none;
   background-color: #ffff;
   text-align: center;
+  cursor: pointer;
+}
+.accept {
+  margin-top: 30px;
+  margin-bottom: -10px;
+
+  input {
+    border: none;
+  }
 }
 @media screen and (min-width: 576px) {
 }
