--- a/src/styles/components/_start.scss
+++ b/src/styles/components/_start.scss
@@ -1,4 +1,5 @@
 .main-container {
+  background-color: $back;
   width: 100vw;
   height: 100vh;
 }
@@ -12,6 +13,7 @@
   background-color: $back;
 }
 .start__main-container-img {
+  margin-top: 20px;
   width: 100%;
   height: 25%;
   display: flex;
@@ -45,7 +47,7 @@
   }
 }
 .start__main-buttons {
-  margin-bottom: 80px;
+  margin-bottom: 85px;
   display: flex;
   justify-content: space-around;
 }
