--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -3,6 +3,9 @@
 
 //Components
 @import "./components/login";
+@import "./components/main-container";
 @import "./components/button";
 @import "./components/start";
 @import "./components/inicio";
+@import "./components/main";
+@import "./components/footer";
