--- a/src/styles/components/_inicio.scss
+++ b/src/styles/components/_inicio.scss
@@ -1,6 +1,5 @@
 .header__main {
-  width: 100%;
-  height: 95%;
+  grid-area: header;
 }
 .header__nav {
   width: 100%;
@@ -18,7 +17,6 @@
   justify-content: space-between;
   width: 100%;
   height: 100%;
-  opacity: 1;
 }
 .header__nav-menu {
   color: #fff;
@@ -59,11 +57,10 @@
     width: 100%;
     height: 40px;
     border-radius: 17px;
+    padding: 20px;
     border: none;
-
     &::placeholder {
       color: $back;
-      padding-left: 10px;
     }
     &:focus {
       outline: none;
@@ -76,7 +73,7 @@
   background-color: #fff;
   color: $dark;
   font-family: "Poppins", sans-serif;
-  font-weight: 700;
+  font-weight: 600;
   cursor: pointer;
 }
 .header__main-section {
@@ -101,6 +98,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  -webkit-transition: background-color 0.3s ease;
+  -moz-transition: background-color 0.3s ease;
+  -ms-transition: background-color 0.3s ease;
+  -o-transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: darken($color: #2f80ed, $amount: 20);
+  }
 }
 .figure__article {
   display: flex;
