--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -2,23 +2,23 @@
   width: 100%;
   height: 100%;
   grid-area: main;
-  background-color: #23959c;
+  background-color: #2c394b;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   justify-items: center;
-  gap: 3.8px;
+  align-content: center;
 }
 .card__main {
-  column-fill: balance;
-  width: 250px;
-  height: 360px;
-  background-color: #f2f2f23b;
-  color: #000;
+  width: 220px;
+  height: 325px;
+  background-color: #334756;
+  color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 10px;
+  margin-left: 10px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -39,20 +39,21 @@
   justify-content: center;
 
   img {
-    max-width: 80%;
+    max-width: 100%;
   }
 }
 
 .card__main-description {
   width: 80%;
   height: 20%;
-  font-weight: 700;
+  font-weight: 200;
   text-align: left;
   margin-top: 10px;
 }
 .card__prices {
   display: inline-block;
   height: 30px;
+  font-weight: bold;
 }
 .card__main-rating {
   width: 90%;
