--- a/src/styles/components/_inicio.scss
+++ b/src/styles/components/_inicio.scss
@@ -1,4 +1,15 @@
-.header__main {
+.main-container {
+  display: grid;
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
+  grid-template-columns: 1fr;
+  grid-template-rows: 100% 1fr 5%;
+  overflow-x: hidden;
+}
+
+.header__main-center.header__main {
   grid-area: header;
 }
 .header__nav {
@@ -28,14 +39,29 @@
   background-color: transparent;
 }
 .header__nav-menu__md {
-  width: 18%;
+  width: 20%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 .header__nav-menu__md-link {
   text-decoration: none;
   color: #fff;
+  padding: 5px;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+
+  &:hover {
+    outline: thin solid #fff;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+  }
 }
 .header__main-center {
   margin-left: auto;
@@ -75,7 +101,15 @@
   color: $dark;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
+  transition: background-color 0.3s ease-in-out;
   cursor: pointer;
+  -webkit-transition: background-color 0.3;
+  -moz-transition: background-color 0.3;
+  -ms-transition: background-color 0.3;
+  -o-transition: background-color 0.3;
+  &:hover {
+    background-color: darken($color: #fff, $amount: 20);
+  }
 }
 .profile {
   width: 39px;
