--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -12,5 +12,15 @@ body {
   width: 100vw;
   height: 100vh;
 }
-
+header {
+  margin: 0;
+  padding: 0;
+  grid-area: header;
+  background-color: $dark;
+  color: $text;
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+}
 /*eso es un comentario*/
