--- a/src/styles/components/_main-container.scss
+++ b/src/styles/components/_main-container.scss
@@ -1,12 +1,15 @@
 .main-container {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
   display: grid;
   grid-template-areas:
-    "header header"
-    "main main"
-    "footer footer";
-  grid-template-columns: 1fr, 1fr;
+    "header"
+    "main"
+    "footer";
+  grid-template-columns: 1fr;
   grid-template-rows: 100% 1fr 5%;
   overflow-x: hidden;
+  justify-items: center;
 }
