--- a/src/styles/components/_start.scss
+++ b/src/styles/components/_start.scss
@@ -83,8 +83,18 @@
 
 // Large devices (desktops, 992px and up)
 @media screen and (min-width: 992px) {
-}
-
-// Extra large devices (large desktops, 1200px and up)
-@media screen and (min-width: 1200px) {
+  .main-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .start__main-container-img {
+    padding-right: 20px;
+  }
+  .start__main-buttons {
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
