Login, Register,Logout funcionando

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -1,11 +1,12 @@
-@import "./base/settings";
-@import "./base/base";
+@import './base/settings';
+@import './base/base';
 
 //Components
-@import "./components/login";
-@import "./components/main-container";
-@import "./components/button";
-@import "./components/start";
-@import "./components/inicio";
-@import "./components/main";
-@import "./components/footer";
+@import './components/login';
+@import './components/main-container';
+@import './components/button';
+@import './components/start';
+@import './components/inicio';
+@import './components/main';
+@import './components/footer';
+@import './components/pruebas';
