--- a/src/styles/components/_inicio.scss
+++ b/src/styles/components/_inicio.scss
@@ -1,9 +1,9 @@
 .main-container {
   display: grid;
   grid-template-areas:
-    "header"
-    "main"
-    "footer";
+    'header'
+    'main'
+    'footer';
   grid-template-columns: 1fr;
   grid-template-rows: 100% 1fr 5%;
   overflow-x: hidden;
@@ -20,7 +20,7 @@
 .header__nav-img {
   display: flex;
   background-image: linear-gradient(180deg, #000000d3, #75757917),
-    url("https://cdn.pixabay.com/photo/2020/08/04/18/43/cyber-monday-5463567_960_720.jpg");
+    url('https://cdn.pixabay.com/photo/2020/08/04/18/43/cyber-monday-5463567_960_720.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -39,7 +39,7 @@
   background-color: transparent;
 }
 .header__nav-menu__md {
-  width: 20%;
+  width: 25%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -99,7 +99,7 @@
   border-radius: 6px;
   background-color: #fff;
   color: $dark;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 600;
   transition: background-color 0.3s ease-in-out;
   cursor: pointer;
