--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -71,3 +71,9 @@
     -o-border-radius: 5px;
   }
 }
+@media screen and (min-width: 576px) {
+}
+
+// Medium devices (tablets, 768px and up)
+@media screen and (min-width: 768px) {
+}
