--- a/src/styles/components/_pruebas.scss
+++ b/src/styles/components/_pruebas.scss
@@ -1,42 +1,63 @@
 .modal-container {
-  width: 100%;
+  width: 98%;
   height: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 10px;
-}
-
-.modal-main {
-  width: 20%;
-  height: 83%;
-  border: thin solid #fff;
-  border-radius: 7px;
-  -webkit-border-radius: 7px;
-  -moz-border-radius: 7px;
-  -ms-border-radius: 7px;
-  -o-border-radius: 7px;
-
-  padding: 10px;
-  &div {
-    width: 100%;
-    background-color: #fff;
-  }
+  margin: 20px;
+  color: #fff;
 }
 .btn-modal {
-  position: absolute;
-  top: 10%;
-  right: 3%;
-  width: 10%;
-  height: 40px;
-  border: thin solid #fff;
-  border-radius: 7px;
-  -webkit-border-radius: 7px;
-  -moz-border-radius: 7px;
-  -ms-border-radius: 7px;
-  -o-border-radius: 7px;
-  padding: 10px;
-  border: none;
   cursor: pointer;
+  border: none;
+  width: 80px;
+  height: 40px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.content {
+  /* display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center; */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  justify-items: center;
+  & div {
+    margin-top: 20px;
+    width: 250px;
+    background-color: #2c394b;
+    & img {
+      max-width: 100%;
+    }
+  }
+}
+hr {
+  display: none;
+}
+.option_cart {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+
+  & div {
+    display: flex;
+    width: 15%;
+    justify-content: space-around;
+  }
+}
+@media screen and (max-width: 576px) {
+  .option_cart {
+    justify-content: space-around;
+    & button {
+      margin-left: 8px;
+      background-color: #fff;
+    }
+  }
+  .content {
+    text-align: center;
+    justify-items: center;
+  }
 }
